# discovery_car

./: Cargo.toml  README.md
src/: car.rs  error.rs  lib.rs  main.rs  motor.rs  norm.rs  stm32f3xx_ext.rs
src/car/: unit_tests.rs
src/car/unit_tests/: new.rs  set_motor_speed.rs  set_motor_speeds.rs  stm32_mocks.rs  with_motor_speeds.rs
src/consts/msg/: en_us.rs
