[package]
authors = ["Brad Gibson <brad@tpfs.io>"]
categories = []
edition = "2018"
keywords = []
license = "MIT or Apache-2.0"
name = "discovery_car"
readme = "README.md"
repository = "https://github.com/u007d/discovery_car"
version = "0.1.0"

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false

[dependencies]
variant_count = "1.0.0"

[target.thumbv7em-none-eabihf.dependencies]
stm32f3-discovery = "0.3.3"
